--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Mon site</title>
     <link rel="Stylesheet" href="css/style.css">
 </head>
